hphp/hack/test/typecheck/truthiness_test_22.php.exp
File "truthiness_test_22.php", line 6, characters 7-8:
Invalid condition: a value of type shape('a' => int, ?'b' => int) will always be truthy (Typing[4273])
