hphp/hack/test/typecheck/truthiness_test_22.php
<?hh // strict

type A = shape('a' => int, ?'b' => int);

function test(A $x): void {
  if ($x) {
  }
}
